--- a/app/assets/styles/base/_page.css
+++ b/app/assets/styles/base/_page.css
@@ -36,6 +36,8 @@ body {
   }
 }
 
+* { box-sizing: border-box }
+
 /* Critical patterns */
 body,
 .footer-legal {
