--- a/app/assets/styles/components/_code-figure.css
+++ b/app/assets/styles/components/_code-figure.css
@@ -3,4 +3,6 @@
 
 .code-figure {
   margin-bottom: $default-spacing-bottom;
+  clear: both;
+  lost-column: 1/1;
 }
